// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          disabled={true}
          placeholder=" "
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk emmGGf"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk MqtJU"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jKqydC"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder=" "
          readOnly={true}
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk dPVOkx"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-dIZBxk jythDm"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          dir="rtl"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-khrHlC ckbtXb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk dPVOkx"
        placeholder="medium"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <input
        className="sc-dIZBxk jythDm"
        placeholder="large"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk fptWeR"
          placeholder="xlarge"
          type="email"
        />
        <label
          className="sc-khrHlC jpbMtc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <input
        className="sc-dIZBxk kOuPuS"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <input
        className="sc-dIZBxk iEiYBx"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl cVOSay"
      >
        <input
          className="sc-dIZBxk gGzdqY"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
